testsuite/tests/indexed-types/should_fail/SimpleFail1b.hs
{-# LANGUAGE TypeFamilies #-}

data family T1 a :: * -> *
data instance T1 Int Bool Char = T1_3   -- must fail: too many args
